PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 5.0.6
- Fixed an error in mysqli_fetch_fields (returned NULL instead of an
  array when row number > field_count). (Georg)
- Renamed CachingRecursiveIterator to RecursiveCachingIterator. (Marcus)
- Fixed bug #35197 (Destructor is not called). (Tony)
- Fixed bug #35009 (ZTS: Persistent resource destruct crashes when extension
  is compiled as shared). (Dmitry)
- Fixed bug #34996 (ImageTrueColorToPalette() crashes when ncolors is
  zero). (Tony)
- Fixed bug #34982 (array_walk_recursive() modifies elements outside function
  scope). (Dmitry)
- Fixed bug #34978 (php out of memory or segmentation fault while installing
  sugarcrm 3.5.1a). (Dmitry)
- Fixed bug #34977 (Compile failure on MacOSX due to use of varargs.h). (Tony)
- Fixed bug #34950 (Unable to get WSDL through proxy). (Dmitry)
- Fixed bug #34938 (dns_get_record() doesn't resolve long hostnames and 
  leaks). (Tony)
- Fixed bug #34856 (configure fails to detect libiconv's type). (Tony)
- Fixed bug #34855 (ibase_service_attach() segfault on AMD64). 
  (irie at gmx dot de, Tony)
- Fixed bug #34810 (mysqli::init() and others use wrong $this pointer 
  without checks). (Tony)
- Fixed bug #34790 (preg_match_all(), named capturing groups, variable
  assignment/return => crash). (Dmitry)
- Fixed bug #34788 (SOAP Client not applying correct namespace to generated
  values). (Dmitry)
- Fixed bug #34787 (SOAP Client not handling boolean types correctly). (Dmitry)
- Fixed bug #34782 (token_get_all() gives wrong result). (Dmitry)
- Fixed bug #34757 (iconv_substr() gives "Unknown error" when offset > string 
  length). (Tony)
- Fixed bug #34723 (array_count_values() strips leading zeroes). (Tony)
- Fixed bug #34704 (Infinite recursion due to corrupt JPEG). (Marcus)
- Fixed bug #34678 (__call(), is_callable() and static methods). (Dmitry)